# termcoder

./: .gitignore  README.md  config.example.toml  env.example  pyproject.toml
docs/: research_and_design_doc.md
src/termcoder/: __init__.py  __main__.py  cli.py  config.py  config_env.py  errors.py  platform_info.py
src/termcoder/agent/: __init__.py  loop.py  system_prompt.py
src/termcoder/approval/: __init__.py  auto.py  diffing.py  types.py
src/termcoder/context/: __init__.py  compaction.py  tokens.py
src/termcoder/llm/: __init__.py  messages.py
src/termcoder/mcp/: __init__.py  client.py  tools.py
src/termcoder/memory/: __init__.py  loader.py
src/termcoder/providers/: __init__.py  llm_client.py  setup.py  usage.py
src/termcoder/repomap/: __init__.py  builder.py  cache.py  tags.py
src/termcoder/repomap/queries/: c-tags.scm  cpp-tags.scm  go-tags.scm  java-tags.scm  javascript-tags.scm  python-tags.scm  rust-tags.scm  typescript-tags.scm
src/termcoder/sandbox/: __init__.py  runner.py
src/termcoder/semantic/: __init__.py  chunker.py  index.py  tool.py
src/termcoder/sessions/: __init__.py  models.py  store.py
src/termcoder/skills/: __init__.py  loader.py  registry.py
src/termcoder/snapshots/: __init__.py  store.py
src/termcoder/tools/: __init__.py  base.py  edit_file.py  find_files.py  list_directory.py  read_file.py  run_command.py  search_text.py  write_file.py
src/termcoder/ui/: __init__.py  approver.py  renderer.py  repl.py
src/termcoder/web/: __init__.py  search.py
src/termcoder/workspace/: __init__.py  ignore.py  paths.py
tests/: test_agent_loop.py  test_agent_phase2.py  test_compaction.py  test_diffing.py  test_env_and_platform.py  test_mcp.py  test_memory.py  test_memory_sections.py  test_messages.py  test_providers.py  test_registry.py  test_repomap.py  test_resilience.py  test_sandbox.py  test_semantic.py  test_sessions.py  test_skills.py  test_snapshots.py  test_system_prompt.py  test_tokens.py  test_tools.py  test_web_search.py  test_workspace.py
