[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "termcoder"
version = "0.5.0"
description = "Privacy-first, terminal-native agentic coding assistant."
readme = "README.md"
requires-python = ">=3.14"
license = { text = "Apache-2.0" }
authors = [{ name = "termcoder contributors" }]
dependencies = [
    "litellm>=1.55,<2",
    "pydantic>=2.12",
    "prompt_toolkit>=3.0",
    "rich>=13.7",
    "typer>=0.12",
    # Repository map. The language pack is pinned below 1.0 on purpose:
    # 1.x releases download parsers from GitHub at runtime, which breaks
    # offline use and conflicts with the privacy-first principle. The 0.x
    # line bundles all parsers in the wheel.
    "tree-sitter>=0.23,<0.26",
    "tree-sitter-language-pack>=0.13,<1",
    # MCP client for connecting to external tool servers over stdio.
    "mcp>=1.27,<2",
    # Required by litellm.search provider initialization (the Brave search
    # config imports dateutil at module load, even when another provider such
    # as SearXNG is selected).
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
# Optional: a closer token estimate for compaction. termcoder falls back to a
# character-based estimate when tiktoken is not installed, so this is not
# required.
tokenizers = ["tiktoken>=0.7"]

[project.scripts]
termcoder = "termcoder.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/termcoder"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
